--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "proxy": "http://localhost:3000",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
