--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "notes-app": "file:",
+    "package.json": "^2.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
