--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.0",
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "notes-app": "file:",
@@ -13,7 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "4.0.3"
   },
   "proxy": "http://localhost:3000",
   "scripts": {
