--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "notes-app": "file:",
-    "package.json": "^2.0.1",
+    "package.json": "^0.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "^3.0.1"
   },
   "proxy": "http://localhost:3000",
   "scripts": {
